fixed highlighted elements on mobile, more animations

--- a/style.css
+++ b/style.css
@@ -13,86 +13,104 @@ body {
   color: #536472;
 }
 
+/**********************************/
+/* UTILITIES */
+/**********************************/
+.noSelect {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -webkit-tap-highlight-color: transparent;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
 @media (min-width: 320px) {
+  /**********************************/
   /* HEADER */
+  /**********************************/
   .header {
     width: 100%;
     height: 10rem;
+    background: #fff;
 
     display: flex;
     justify-content: space-evenly;
     align-items: center;
   }
 
-  .icon-heart-outlined,
-  .icon-magnifying-glass {
+  .header__fav-button,
+  .header__search-button {
     height: 3rem;
     width: 3rem;
-    fill: #536472;
-    transition: all 0.2s;
+    background: none;
+    border: none;
+    outline: none;
     cursor: pointer;
   }
 
-  .icon-heart-outlined:hover {
-    fill: #ef233c;
-  }
-
-  .icon-heart-outlined:active {
-    fill: #ff808f;
-  }
-
-  .icon-magnifying-glass:hover {
-    fill: #9695ed;
-  }
-
-  .icon-magnifying-glass:active {
-    fill: #cac9ff;
-  }
-
-  .search-input {
+  .header__search-input {
     width: 17rem;
     font-family: "Poppins", sans-serif;
     font-size: 1.4rem;
-    color: #536472;
     font-weight: 400;
+    color: #536472;
 
     outline: none;
     border: 2px solid #ccc;
     border-radius: 2rem;
     padding: 0.5rem 1rem;
-
     transition: all 0.2s;
   }
 
-  .search-input:hover,
-  .search-input:focus {
+  .header__search-input:hover,
+  .header__search-input:focus {
     animation: borderIn 3s cubic-bezier(0.3, 0.46, 0, 0.95);
     animation-fill-mode: forwards;
   }
 
-  .search-input::placeholder {
+  .header__search-input::placeholder {
     font-weight: 300;
     color: #ccc;
   }
 
+  .header__icon-heart-outlined,
+  .header__icon-magnifying-glass {
+    height: 100%;
+    width: 100%;
+    fill: #536472;
+    transition: all 0.2s;
+  }
+
+  .header__icon-heart-outlined:active {
+    fill: #ef233c;
+    transform: translateY(0.5rem) scale(0.9);
+  }
+
+  .header__icon-magnifying-glass:active {
+    fill: #9695ed;
+    transform: translateY(0.5rem) scale(0.9);
+  }
+
+  /**********************************/
   /* FAV SECTION */
+  /**********************************/
   .fav-section {
     width: 100%;
     height: 12rem;
-    background-color: #fbf3fa;
+    background-color: #fafafa;
     display: flex;
-
     overflow: scroll;
-
-    border-bottom: 3px solid #f1eff1;
-    border-top: 3px solid #f1eff1;
+    border-bottom: 3px solid #f5f5f5;
+    border-top: 3px solid #f5f5f5;
   }
 
   .fav-section::-webkit-scrollbar {
     display: none;
   }
 
-  .recipe-container {
+  .fav-section__recipe-container {
     width: 8.5rem;
     height: 100%;
 
@@ -105,24 +123,60 @@ body {
     justify-content: center;
   }
 
-  .recipe-image {
+  .fav-section__recipe-image-container {
+    position: relative;
+  }
+
+  .fav-section__recipe-image {
     width: 7rem;
     height: 7rem;
     cursor: pointer;
-
+    transform: translateY(-0.25rem);
     border-radius: 50%;
     border: 2px solid #fff;
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.2);
+    transition: all 0.2s;
   }
 
-  .recipe-name {
+  .fav-section__recipe-image:active {
+    transform: translateY(0rem) scale(0.9);
+  }
+
+  .fav-section__remove-fav-button {
+    width: 2.5rem;
+    height: 2.5rem;
+    background: #fff;
+    position: absolute;
+    top: 0;
+    left: 70%;
+    border-radius: 50%;
+    border: 2px solid #ccc;
+    outline: none;
+    cursor: pointer;
+    transition: all 0.2s;
+  }
+
+  .fav-section__remove-fav-button:active {
+    transform: translateY(0.25rem) scale(0.9);
+  }
+
+  .fav-section__remove-fav-icon {
+    width: 100%;
+    height: 100%;
+    fill: #536472;
+  }
+
+  .fav-section__recipe-name {
     font-size: 1.1rem;
     font-weight: 700;
   }
 
-  /* CUSTOM SECTION */
-  .custom-section {
+  /**********************************/
+  /* MAIN SECTION */
+  /**********************************/
+  .main-section {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     margin: 2rem 0;
@@ -136,53 +190,62 @@ body {
     background: -webkit-linear-gradient(to right, #b06ab3, #4568dc);
     background: linear-gradient(to right, #b06ab3, #4568dc);
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.2);
-
     border-radius: 0.5rem;
     position: relative;
   }
 
-  .custom-text-container {
+  .custom-card__text-container {
     margin: 2rem 1rem 0 1rem;
   }
 
-  .secondary-heading {
+  .custom-card__heading {
     font-size: 1.8rem;
     font-weight: 600;
   }
 
-  .icon-cross {
-    height: 3rem;
-    width: 3rem;
-    fill: #fff;
-    position: absolute;
-    top: 10%;
-    left: 85%;
-    transition: all 0.2s;
-    cursor: pointer;
-  }
-
-  .icon-cross:hover {
-    fill: #ddd;
-  }
-
-  .icon-cross:active {
-    fill: #fff;
-  }
-
-  .custom-text {
+  .custom-card__text {
     font-size: 1.7rem;
     font-weight: 300;
   }
 
-  .custom-button {
+  .custom-card__close-button {
+    height: 3rem;
+    width: 3rem;
+    position: absolute;
+    top: 10%;
+    left: 85%;
+    cursor: pointer;
+    background: none;
+    outline: none;
+    border: none;
+    transition: all 0.2s;
+  }
+
+  .custom-card__close-button:active {
+    transform: translateY(0.25rem) scale(0.9);
+  }
+
+  .custom-card__close-icon {
+    height: 100%;
+    width: 100%;
+    fill: #fff;
+    transition: all 0.2s;
+  }
+
+  .custom-card__close-icon:active {
+    fill: #ddd;
+  }
+
+  .custom-card__start-button {
     position: absolute;
     top: 75%;
     left: 50%;
-    transform: translate(-50%, -75%);
+    transform: translate(-50%, -75%) scale(1);
     cursor: pointer;
 
     font-size: 1.4rem;
     font-weight: 300;
+    color: #fff;
     text-transform: uppercase;
     letter-spacing: 2px;
     padding: 0.5rem 2rem;
@@ -190,19 +253,19 @@ body {
     background: rgba(255, 255, 255, 0.3);
     border: 2px solid #fff;
     border-radius: 3rem;
-    color: #fff;
     outline: none;
+    transition: all 0.2s;
   }
 
-  .custom-button:hover {
+  .custom-card__start-button:active {
     background: rgba(255, 255, 255, 0.5);
-  }
-
-  .custom-button:active {
-    background: rgba(255, 255, 255, 0.4);
+    transform: translate(-50%, -70%) scale(0.95);
   }
 }
 
+/**********************************/
+/* ANIMATIONS */
+/**********************************/
 @keyframes borderIn {
   0% {
     border-bottom-color: #9695ed;
